1. Fix a problem with CSS minification. 2. Gracefully display CSS minification errors 3. Add semi-fancy more menu on mobile (in progress)

--- a/css/misc/typography.styl
+++ b/css/misc/typography.styl
@@ -2,9 +2,9 @@ html
   font-size 10px
 
 body
-  font-family "Open Sans", BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
-  font-size 1.6rem
-  line-height 2.8rem
+  font-family $defaultFont
+  font-size $defaultFontSize
+  line-height $defaultLineHeight
 
 p
   margin 2.2rem 0
